--- a/project1/scripts/Run.ipynb
+++ b/project1/scripts/Run.ipynb
@@ -16,25 +16,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "ename": "NameError",
-     "evalue": "name 'load_data_features' is not defined",
+     "evalue": "name 'X_train' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-d3c5de728e93>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mpath\u001b[0m \u001b[1;33m=\u001b[0m  \u001b[1;34m\"C:/Users/jurri/OneDrive/Documenten/University/Exchange/ML/train\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mids\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mload_data_features\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpath\u001b[0m \u001b[1;33m+\u001b[0m\u001b[1;34m\"/train.csv\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mload_results\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpath\u001b[0m \u001b[1;33m+\u001b[0m\u001b[1;34m\"/train.csv\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;34m\"\"\"Use this cell if y_test is NOT known\"\"\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'load_data_features' is not defined"
+      "\u001b[1;32m<ipython-input-21-b244ceab343c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[0mX_test\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mids_test\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mload_data_features\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpath\u001b[0m \u001b[1;33m+\u001b[0m\u001b[1;34m\"/test.csv\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m X_train, X_test_pro, y_train, _, ids_tr_group, ids_test_group = process_data(X_train, \n\u001b[0m\u001b[0;32m      9\u001b[0m                                                     X_test, y_train, None, ids_train, ids_test)\n\u001b[0;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'X_train' is not defined"
      ]
     }
    ],
    "source": [
     "path =  \"C:/Users/jurri/OneDrive/Documenten/University/Exchange/ML/train\"\n",
-    "X, ids = load_data_features(path +\"/train.csv\")\n",
-    "y = load_results(path +\"/train.csv\")\n",
+    "X_train, ids = load_data_features(path +\"/train.csv\")\n",
+    "y_train = load_results(path +\"/train.csv\")\n",
     "\n",
     "\"\"\"Use this cell if y_test is NOT known\"\"\"\n",
     "X_test, ids_test = load_data_features(path +\"/test.csv\")\n",
@@ -43,9 +43,17 @@
     "                                                    X_test, y_train, None, ids_train, ids_test)\n",
     "\n",
     "#parameters to be changed in this fucntion\n",
-    "degrees = np.linspace(3,9,7, dtype = int)\n",
-    "lambdas = np.logspace(-13,-9,4)\n",
-    "methods = [\"Penalized_logistic\"]\n",
+    "#test fro sepcific degrees for each subset\n",
+    "degrees = [np.linspace(3,9,7, dtype = int), np.linspace(6, 14, 9, dtype = int), np.linspace(9, 17, 8, dtype = int)]\n",
+    "\n",
+    "#test for specific lambdas for each subset\n",
+    "lambdas_base = np.array([0])\n",
+    "lambdas = [np.append(np.logspace(-13,-9,6), lambdas_base),\n",
+    "          np.append(np.logspace(-13,-5,9), lambdas_base),\n",
+    "          np.append(np.logspace(-13, -9,6), lambdas_base)]\n",
+    "\n",
+    "#test for both methods\n",
+    "methods = [\"Ridge_regression\", \"Penalized_logistic\"]\n",
     "\n",
     "best_parameter_per_set, losses_per_set = find_parameters(X_train, y_train, degrees, lambdas, methods)\n",
     "y_result = []\n",
@@ -57,12 +65,14 @@
     "    X_train_ex = add_features(X_train[i], degree = degree)\n",
     "    X_test_pro_ex = add_features(X_test_pro[i], degree = degree)\n",
     "    \n",
-    "    if method == \"Ridge_regression\"\n",
+    "    if method == \"Ridge_regression\":\n",
     "        w = ridge_regression(y_train[i], X_train_ex, lambda_)\n",
     "        y_result.append(X_test_pro_ex @ w)\n",
-    "    elif method = \"Penalized_logistic\":\n",
+    "    elif method == \"Penalized_logistic\":\n",
     "        # needs bit more\n",
-    "        w = learning_by_penalized_gradient(y, tx, w, gamma, lambda_)\n",
+    "        _ , w = logistic_regression_penalized_gradient_descent(y_train[i], X_train_ex, lambda_,\n",
+    "                                                               gamma = 10**-10, max_iter = 3000)\n",
+    "        y_result.append(X_test_pro_ex @ w)\n",
     "        \n",
     "\n",
     "y_final = stitch_solution(X_test, y_result, ids_test_group, ids_test)\n",
@@ -92,7 +102,20 @@
     "X_train, X_test_pro, y_train, y_test_pro, ids_tr_group, ids_test_group = process_data(X_train, \n",
     "                                                    X_test, y_train, y_test, ids_train, ids_test)\n",
     "\n",
-    "best_parameter_per_set, losses_per_set = find_parameters(X_train, y_train)\n",
+    "#parameters to be changed in this fucntion\n",
+    "#test fro sepcific degrees for each subset\n",
+    "degrees = [np.linspace(3,9,7, dtype = int), np.linspace(6, 14, 9, dtype = int), np.linspace(9, 17, 8, dtype = int)]\n",
+    "\n",
+    "#test for specific lambdas for each subset\n",
+    "lambdas_base = np.array([0])\n",
+    "lambdas = [np.append(np.logspace(-13,-9,6), lambdas_base),\n",
+    "          np.append(np.logspace(-13,-5,9), lambdas_base),\n",
+    "          np.append(np.logspace(-13, -9,6), lambdas_base)]\n",
+    "\n",
+    "#test for both methods\n",
+    "methods = [\"Ridge_regression\", \"Penalized_logistic\"]\n",
+    "\n",
+    "best_parameter_per_set, losses_per_set = find_parameters(X_train, y_train, degrees, lambdas, methods)\n",
     "\n",
     "y_result = []\n",
     "for i in range(3):\n",
